# flutter-native-IM-ai

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  aiim_mnn_jni.cpp
android/app/src/main/kotlin/com/aiim/flutter_native_im_ai/: MainActivity.kt
android/app/src/main/kotlin/com/aiim/flutter_native_im_ai/mnn/: MnnLlmPlugin.kt  MnnNativeBridge.kt  MnnStreamGlue.kt
ios/: Podfile
ios/Frameworks/: PLACE_MNN_FRAMEWORK_HERE.txt
ios/Runner/: AiimMnnLlmEngine.h  AiimMnnLlmEngine.mm  AppDelegate.swift  Info.plist  MnnLlmEngineBridge.swift  MnnLlmIosMnnBackend.swift  MnnLlmPlugin.swift  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  home_shell.dart
lib/app/theme/: app_theme.dart
lib/core/ai/: mnn_catalog.dart  mnn_llm_platform.dart  mnn_local_llm_controller.dart  mnn_model_store.dart
lib/core/chat/: chat_controller.dart  chat_protocol.dart  chat_types.dart
lib/core/profile/: profile_store.dart  profile_validators.dart  user_profile.dart
lib/features/ai_chat/: ai_chat_page.dart
lib/features/chat_room/: chat_room_page.dart
lib/features/chat_sessions/: chat_sessions_page.dart
lib/features/connect/: connect_page.dart
lib/features/me/: edit_profile_page.dart  me_page.dart
test/: widget_test.dart
tools/: build_mnn_ios.sh  setup_mnn_headers.ps1
tools/pc-ai-server/: .env.example  server.py
